updated css grids to prevent overflow

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -15,9 +15,10 @@
 .index_wrapper {
   display: grid;
   flex-direction: column;
-  grid-template-columns: 1fr 1fr;
-  margin: 1em;
+  grid-template-columns: 50% 50%;
   grid-gap: 1em;
+  justify-content: space-around;
+  margin: 1em;
 
   .card {
     position: relative;
@@ -33,6 +34,10 @@
     .backdrop {
       padding: 1em;
       border-radius: 20px;
+      word-break: break-all;
+      h1, h2, h3, h4, h5 {
+        font-size: 3em !important;
+      }
     }
     .card_info {
       display: none;
